@@ -28,3 +28,4 @@ ABOUT-NLS
 COPYING
 .lclintrc
 xml-i18n-*
+intltool-*
