@@ -7,7 +7,7 @@ libinclude_HEADERS =    \
 
 EXTRA_DIST = message-of-doom \
 	changes.txt          \
-	xml-i18n-extract.in  \
-	xml-i18n-merge.in    \
-	xml-i18n-update.in
+	intltool-extract.in  \
+	intltool-merge.in    \
+	intltool-update.in
 
