@@ -25,6 +25,6 @@ serverdir = $(libdir)/bonobo/servers
 server_in_files = Bonobo_Sample_Hello.server.in
 server_DATA = $(server_in_files:.server.in=.server)
 
-@XML_I18N_MERGE_SERVER_RULE@
+@INTLTOOL_SERVER_RULE@
 
 EXTRA_DIST = $(server_in_files) $(server_DATA)
